--- a/lgsm/config-default/config-lgsm/arma3server/_default.cfg
+++ b/lgsm/config-default/config-lgsm/arma3server/_default.cfg
@@ -1,23 +1,23 @@
 ##################################
 ######## Default Settings ########
 ##################################
-# DO NOT EDIT, ANY CHANGES WILL BE OVERWRITTEN!
-# Copy settings from here and use them in either:
-# common.cfg - applies settings to every instance.
-# [instance].cfg - applies settings to a specific instance.
+# 不要编辑，任何更改都将被覆盖！
+# 从此处复制设置，并在其中任一位置使用它们：
+# common.cfg - 将设置应用于每个实例.
+# [instance].cfg - 将设置应用于特定实例.
 
-#### Game Server Settings ####
+#### 1.游戏服务器设置 ####
 
 ## SteamCMD Login | https://docs.linuxgsm.com/steamcmd#steamcmd-login
 steamuser="username"
 steampass='password'
 
-## Predefined Parameters | https://docs.linuxgsm.com/configuration/start-parameters
+## 预定义参数 | https://docs.linuxgsm.com/configuration/start-parameters
 ip="0.0.0.0"
 port="2302"
 
 ## ARMA 3 Modules
-# Add mods with relative paths:
+# 添加具有相对路径的 MOD:
 # mods/@cba_a3
 # To load the "Community Base Addons v3" module found in the
 # directory serverfiles/mods/@cba_a3.  Load several mods as:
@@ -27,45 +27,45 @@ mods=""
 ## Server-side Mods
 servermods=""
 
-## Path to BattlEye
-# Leave empty for default
+## BattlEye 的路径
+# 默认为空
 bepath=""
 
 ## Server Parameters | https://docs.linuxgsm.com/configuration/start-parameters#additional-parameters
 startparameters="-ip=${ip} -port=${port} -cfg=${networkcfgfullpath} -config=${servercfgfullpath} -mod=${mods} -servermod=${servermods} -bepath=${bepath} -autoinit -loadmissiontomemory"
 
-#### LinuxGSM Settings ####
+#### 2.LinuxGSM 设置 ####
 
 ## LinuxGSM Stats
-# Send useful stats to LinuxGSM developers.
+# 向 LinuxGSM 开发人员发送有用的统计信息.
 # https://docs.linuxgsm.com/configuration/linuxgsm-stats
 # (on|off)
 stats="off"
 
-## Notification Alerts
+## 通知警报
 # (on|off)
 
-# Display IP | https://docs.linuxgsm.com/alerts#display-ip
+# 显示 IP | https://docs.linuxgsm.com/alerts#display-ip
 displayip=""
 
-# More info | https://docs.linuxgsm.com/alerts#more-info
+# 更多信息 | https://docs.linuxgsm.com/alerts#more-info
 postalert="off"
 
-# Discord Alerts | https://docs.linuxgsm.com/alerts/discord
+# 不和谐警报 | https://docs.linuxgsm.com/alerts/discord
 discordalert="off"
 discordwebhook="webhook"
 
-# Email Alerts | https://docs.linuxgsm.com/alerts/email
+# 电子邮件提醒 | https://docs.linuxgsm.com/alerts/email
 emailalert="off"
 email="email@example.com"
 emailfrom=""
 
-# IFTTT Alerts | https://docs.linuxgsm.com/alerts/ifttt
+# IFTTT 警报 | https://docs.linuxgsm.com/alerts/ifttt
 iftttalert="off"
 ifttttoken="accesstoken"
 iftttevent="linuxgsm_alert"
 
-# Mailgun Email Alerts | https://docs.linuxgsm.com/alerts/mailgun
+# Mailgun 电子邮件警报 | https://docs.linuxgsm.com/alerts/mailgun
 mailgunalert="off"
 mailgunapiregion="us"
 mailguntoken="accesstoken"
@@ -73,26 +73,26 @@ mailgundomain="example.com"
 mailgunemailfrom="alert@example.com"
 mailgunemail="email@myemail.com"
 
-# Pushbullet Alerts | https://docs.linuxgsm.com/alerts/pushbullet
+# 手推式警报 | https://docs.linuxgsm.com/alerts/pushbullet
 pushbulletalert="off"
 pushbullettoken="accesstoken"
 channeltag=""
 
-# Pushover Alerts | https://docs.linuxgsm.com/alerts/pushover
+# 推覆警报 | https://docs.linuxgsm.com/alerts/pushover
 pushoveralert="off"
 pushovertoken="accesstoken"
 pushoveruserkey="userkey"
 
-# Rocket.Chat Alerts | https://docs.linuxgsm.com/alerts/rocket.chat
+# Rocket.Chat 警报 | https://docs.linuxgsm.com/alerts/rocket.chat
 rocketchatalert="off"
 rocketchatwebhook="webhook"
 rocketchattoken=""
 
-# Slack Alerts | https://docs.linuxgsm.com/alerts/slack
+# Slack 警报 | https://docs.linuxgsm.com/alerts/slack
 slackalert="off"
 slackwebhook="webhook"
 
-# Telegram Alerts | https://docs.linuxgsm.com/alerts/telegram
+# Telegram 警报 | https://docs.linuxgsm.com/alerts/telegram
 # You can add a custom cURL string eg proxy (useful in Russia) in "curlcustomstring".
 # For example "--socks5 ipaddr:port" for socks5 proxy see more in "curl --help".
 telegramalert="off"
@@ -100,28 +100,28 @@ telegramtoken="accesstoken"
 telegramchatid=""
 curlcustomstring=""
 
-## Updating | https://docs.linuxgsm.com/commands/update
+## 更新 | https://docs.linuxgsm.com/commands/update
 updateonstart="off"
 
-## Backup | https://docs.linuxgsm.com/commands/backup
+## 备份 | https://docs.linuxgsm.com/commands/backup
 maxbackups="4"
 maxbackupdays="30"
 stoponbackup="on"
 
-## Logging | https://docs.linuxgsm.com/features/logging
+## 日志 | https://docs.linuxgsm.com/features/logging
 consolelogging="on"
 logdays="7"
 
-## Monitor | https://docs.linuxgsm.com/commands/monitor
-# Query delay time
+## 监控 | https://docs.linuxgsm.com/commands/monitor
+# 查询延迟时间
 querydelay="5"
 
-## ANSI Colors | https://docs.linuxgsm.com/features/ansi-colors
+## ANSI 色彩 | https://docs.linuxgsm.com/features/ansi-colors
 ansi="on"
 
-#### Advanced Settings ####
+#### 3.高级设置 ####
 
-## Message Display Time | https://docs.linuxgsm.com/features/message-display-time
+## 信息显示时间 | https://docs.linuxgsm.com/features/message-display-time
 sleeptime="0.5"
 
 ## SteamCMD Settings | https://docs.linuxgsm.com/steamcmd
@@ -134,7 +134,7 @@ betapassword=""
 # Master Server | https://docs.linuxgsm.com/steamcmd/steam-master-server
 steammaster="false"
 
-## Stop Mode | https://docs.linuxgsm.com/features/stop-mode
+## 停止模式 | https://docs.linuxgsm.com/features/stop-mode
 # 1: tmux kill
 # 2: CTRL+c
 # 3: quit
@@ -148,7 +148,7 @@ steammaster="false"
 # 11: end
 stopmode="2"
 
-## Query mode
+## 查询方式
 # 1: session only
 # 2: gamedig (gsquery fallback)
 # 3: gamedig
@@ -157,20 +157,20 @@ stopmode="2"
 querymode="2"
 querytype="protocol-valve"
 
-## Console type
+## 控制台类型
 consoleverbose="yes"
 consoleinteract="no"
 
-## Game Server Details
-# Do not edit
+## 游戏服务器详细信息
+# 禁止编辑
 gamename="ARMA 3"
 engine="realvirtuality"
 glibc="2.13"
 
-#### Directories ####
-# Edit with care
+#### 4.目录 ####
+# 谨慎编辑
 
-## Game Server Directories
+## 游戏服务器目录
 systemdir="${serverfiles}"
 executabledir="${serverfiles}"
 executable="./arma3server_x64"
@@ -183,10 +183,10 @@ networkcfg="${selfname}.network.cfg"
 networkcfgdefault="network.cfg"
 networkcfgfullpath="${networkcfgdir}/${networkcfg}"
 
-## Backup Directory
+## 备份目录
 backupdir="${lgsmdir}/backup"
 
-## Logging Directories
+## 日志目录
 logdir="${rootdir}/log"
 lgsmlogdir="${logdir}/script"
 consolelogdir="${logdir}/console"
@@ -195,6 +195,6 @@ consolelog="${consolelogdir}/${selfname}-console.log"
 alertlog="${lgsmlogdir}/${selfname}-alert.log"
 postdetailslog="${lgsmlogdir}/${selfname}-postdetails.log"
 
-## Logs Naming
+## 日志命名格式
 lgsmlogdate="${lgsmlogdir}/${selfname}-script-$(date '+%Y-%m-%d-%H:%M:%S').log"
 consolelogdate="${consolelogdir}/${selfname}-console-$(date '+%Y-%m-%d-%H:%M:%S').log"
